@@ -1,11 +1,11 @@
 README:  Tk
-    This is the Tk 8.5.5 source distribution.
+    This is the Tk 8.5.6b1 source distribution.
     Tcl/Tk is also available through NetCVS:
 	http://tcl.sourceforge.net/
     You can get any source release of Tcl from the file distributions
     link at the above URL.
 
-RCS: @(#) $Id: README,v 1.53.2.3 2008/08/28 16:13:46 dgp Exp $
+RCS: @(#) $Id: README,v 1.53.2.4 2008/10/23 16:30:57 dgp Exp $
 
 1. Introduction
 ---------------
