@@ -1,3 +1,15 @@
+2008-10-23  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tk.h:		Bump version number to 8.5.6b1 to distinguish
+	* library/tk.tcl:	CVS development snapshots from the 8.5.5 and
+	* unix/configure.in:	8.5.6 releases.
+	* unix/tk.spec:
+	* win/configure.in:
+	* README:
+
+	* unix/configure:	autoconf (2.59)
+	* win/configure:
+
 2008-10-17  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* library/ttk/scale.tcl: Backported keyboard bindings for ttk::scale
